sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value j
		j = i - 1 
                ^AlgInsertionSort:10: error: not found: value j
		while (j !=1 && !plusPetitQue(j, v))
                       ^AlgInsertionSort:12: error: not found: value j
				 copie(j , j + 1)
                                       ^AlgInsertionSort:13: error: not found: value j
				 j-= 1
                                 ^AlgInsertionSort:15: error: not found: value j
		setValeur(j, v)
                          ^