sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

	var v = 0 ; 
	
	for ( i <- 1 to getNombreValeurs -1)
	{
		v = getValeur(i);
		j = i - 1 
		while (j !=1 && !plusPetitQue(j, v))
		{
				 copie(j , j + 1)
				 j-= 1
		}
		setValeur(j, v)
	}

}
